--- a/TennisScoreBoard/TennisScoreBoard.vcxproj
+++ b/TennisScoreBoard/TennisScoreBoard.vcxproj
@@ -82,6 +82,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TennisScoreBoard.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TennisScoreBoard.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
