--- a/CalcGCD/CalcGCD.vcxproj.filters
+++ b/CalcGCD/CalcGCD.vcxproj.filters
@@ -15,16 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="calcGCD.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="TennisScoreBoard.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="TennisScoreBoard.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
